# geode

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  FindPathPython.cmake  GeodeSupport.cmake  setup.cfg
geode/: CMakeLists.txt  config.h.in
geode/array/: Nested.cpp  __init__.py  test_array.py  test_stencil.py
geode/exact/: test_circle.py  test_exact.py  test_mesh_csg.py  test_perturb.py
geode/force/: force_test.py  test_force.py
geode/geometry/: test_box_tree.py  test_offset.py  test_platonic.py  test_shape.py  test_surface_levelset.py
geode/image/: test_mov.py
geode/math/: max.h  min.h  sse.h  test_sse.py  test_uint128.py  uint128.cpp
geode/mesh/: TriangleTopology.cpp  __init__.py  ids.h  test_decimate.py  test_halfedge.py  test_io.py  test_mesh.py
geode/openmesh/: TriMesh.cpp  TriMesh.h  __init__.py  decimate.cpp  decimate.h  test_trimesh.py
geode/python/: Buffer.cpp  Buffer.h  Class.cpp  Class.h  enum.h  exceptions.cpp  from_python.cpp  module.cpp  module.h  numpy.h  test_class.py  test_convert.py  to_python.h  wrap_function.cpp
geode/random/: test_random.py
geode/random/random123/features/: gccfeatures.h
geode/solver/: nelder_mead.py  test_min.py
geode/structure/: test_heap.py
geode/svg/: test_svg.py
geode/utility/: config.h  process.cpp  test_misc.py  test_try.py  tryfile.py
geode/value/: ChangeTracker.py  Prop.cpp  Worker.py  __init__.py  parser.py  test_value.py  test_worker.py
geode/vector/: Frame.cpp  Frame.py  Vector4d.h  __init__.py  blas.h  test_matrix.py  test_register.py  test_vector.py
scripts/: install_deps.sh
